--- a/app/index.html
+++ b/app/index.html
@@ -12,19 +12,34 @@
 </head>
 <body ng-controller="PhoneListCtrl">
 
-    <ul>
-      <li ng-repeat="phone in phones">
-        {{phone.name}}
-        <p>{{phone.snippet}}</p>
-      </li>
-    </ul>
-    <p>Total number of phones: {{phones.length}}</p>
-    <p>Hello, {{name}}!</p>
+<div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+          <!--Sidebar content-->
 
-<table>
-  <tr><th>row number</th></tr>
-  <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i}}</td></tr>
-</table>
+          Search: <input ng-model="query">
+            Sort by:
+            <select ng-model="orderProp">
+                <option value="name">Alphabetical</optopn>
+                <option value="age">Newest</option>
+            </select>
+
+        </div>
+        <div class="col-md-10">
+          <!--Body content-->
+
+          <ul class="phones">
+            <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+              {{phone.name}}
+              <p>{{phone.snippet}}</p>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+
+
     
   </body>
 </html>
