--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  
+  <script src="js/filters.js"></script>
 
 </head>
 <body>
